--- a/MeetingNotes/20200624.md
+++ b/MeetingNotes/20200624.md
@@ -1,6 +1,4 @@
-EARK3 A2 meeting on 24th of June 2020
-
-# Minutes
+# Minutes on EARK3 A2 meeting on 24th of June 2020
 
 ## Members:
 
@@ -26,20 +24,22 @@ Apologies:
 •         David Anderson (Highbury IVS)
 •         Sven Schlarb (Swiss Federal Archives)
 •         Henrik K. R. Jakobson (DNA)
-
-
 •         Lars J Alvik (National Archives of Norway 
 •         Miguel Ferreira (KEEP Solutions)
 •         Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 
 ## Text: 
+
 All specs are going to the technical check in A3 to see if it is possible to create a validation. If it is possible then we’ll transform them to GH format. If not, they will stay in word format (pre-face will be prepared). The format for the documents in the open review is PDF.
+
 1st of September is the last date for internal comments on our specifications going out on open review in October. All specs are in A2 folder in Drive to be commented as comments in the documents, and changes as tracked changes the authors are the ones handling them .
+
 Please, everybody, fill in vacation plan in Drive A2 folder. 
+
 Check-in calls have been done, there will be some follow-up calls. 
   
--          Progress report of specs:
+- Progress report of specs:
 
 *Overall admin*/ KB: Review is coming up.
 
@@ -61,10 +61,15 @@ Check-in calls have been done, there will be some follow-up calls.
 
 *Endorsement and certification*/ KB: Most likely it will look similar to the archival description, we’ll see where we end up there. 
 
-*SIARD*/ABN comments continuing work with 4 subtasks regarding use cases, the actual way of creating the CITS based on results of use cases, as well modified SIARD 2.2 comments, and finally part with a user group that we didn’t have resources at first. LR will present that part. More in-depth discussions will follow next.   
-LR presents the work with the doc to gather all ideas for setting up the user group for SIARD: (https://docs.google.com/document/d/1d7H2LxUm373gXCasQDXq0Jd-vqfN5fsyZtFPU5kXoBk/edit#heading=h.r59oampq2olw). As we have different SIARD related components we propose to create a general knowledge base that stands for the big picture and links to all related components (incl figure). Case studies should be linked to the user group. The document is open for comments.
-KB comments that this looks a very good start and suggests to add the DLM Forum to the knowledge base.  GZ Q how to engage people to contribute if they are not part of the consortium? ABN proposes further discussions for that, Dilcis board, OPF, we have different kinds of users who are already asking questions. JA also points out the current website (asking do you want to join the user community and passive page of knowledge centre). KB proposes a roadmap for start, how to do it before we decide where to do it. Maybe use the same setup for other specs. 
+*SIARD*/ABN comments continuing work with 4 subtasks regarding use cases, the actual way of creating the CITS based on results of use cases, as well modified SIARD 2.2 comments, and finally part with a user group that we didn’t have resources at first. LR will present that part. More in-depth discussions will follow.   
+
+LR presents the work with the doc to gather all ideas for setting up the user group for SIARD: (https://docs.google.com/document/d/1d7H2LxUm373gXCasQDXq0Jd-vqfN5fsyZtFPU5kXoBk/edit#heading=h.r59oampq2olw). 
+As we have different SIARD related components we propose to create a general knowledge base that stands for the big picture and links to all related components (incl figure). Case studies should be linked to the user group. The document is open for comments.
+
+KB comments that this looks a very good start and suggests to add the DLM Forum to the knowledge base. GZ Q how to engage people to contribute if they are not part of the consortium? ABN proposes further discussions for that, Dilcis board, OPF, we have different kinds of users who are already asking questions. JA also points out the current website (asking do you want to join the user community and passive page of knowledge centre). KB proposes a roadmap for start, how to do it before we decide where to do it. Maybe use the same setup for other specs. 
+
 JA specifies the stand by persons for the review of NAN and SFA with AH and AL. 
+
 Next meeting July 22th, focus SIARD User Group after short update reports from the different specifications.
 
 ## Notes by: 
