--- a/MeetingNotes/20200624.md
+++ b/MeetingNotes/20200624.md
@@ -1,4 +1,4 @@
-# Minutes on EARK3 A2 meeting on 24th of June 2020
+# Minutes on E-ARK3 A2 meeting on 24th of June 2020
 
 ## Members:
 
@@ -68,9 +68,9 @@ As we have different SIARD related components we propose to create a general kno
 
 KB comments that this looks a very good start and suggests to add the DLM Forum to the knowledge base. GZ Q how to engage people to contribute if they are not part of the consortium? ABN proposes further discussions for that, Dilcis board, OPF, we have different kinds of users who are already asking questions. JA also points out the current website (asking do you want to join the user community and passive page of knowledge centre). KB proposes a roadmap for start, how to do it before we decide where to do it. Maybe use the same setup for other specs. 
 
-JA specifies the stand by persons for the review of NAN and SFA with AH and AL. 
+- JA specifies the stand by persons for the review of NAN and SFA with AH and AL. 
 
-Next meeting July 22th, focus SIARD User Group after short update reports from the different specifications.
+- Next meeting July 22th, focus SIARD User Group after short update reports from the different specifications.
 
 ## Notes by: 
 
