--- a/MeetingNotes/20200601.md
+++ b/MeetingNotes/20200601.md
@@ -26,5 +26,8 @@ The SIARD team suggestion is to:
 *Risk*: If the change is implemented we avoid double work and limit this RFC SIARD to one subject. The review might not contain all wanted attributes but will contain enough to be able to give comments on. If we don’t do this change the work will still be needed to done in the near future and demand a more substantial RFS SIARD with this as change as one part.<br/>
 *Cost*: Fits into current planning.<br/>
 
+## Decision:
+The change request is agrred upon with a yes.
+
 ## Notes by:
 Karin Bredenberg, 2020-06-01
