--- a/MeetingNotes/20200601.md
+++ b/MeetingNotes/20200601.md
@@ -27,7 +27,7 @@ The SIARD team suggestion is to:
 *Cost*: Fits into current planning.<br/>
 
 ## Decision:
-The change request is agrred upon with a yes.
+The change request is agreed upon with a vote of yes.
 
 ## Notes by:
 Karin Bredenberg, 2020-06-01
