--- a/MeetingNotes/20200706.md
+++ b/MeetingNotes/20200706.md
@@ -1,13 +1,18 @@
 # Minutes per capsulam 2020-07-07
 
-## Members who voted by email: 
+## Member voting by email
+### Explicit yes
  - Karin Bredenberg (Kommunalförbundet Sydarkivera, chair)
  - Anders Bo Nielsen (National Archives of Denmark)
  - Kuldar Aas (National Archives of Estonia)
  - Audun Lund (Swiss Federal Archives)
  - Miguel Ferreira (KEEP Solutions)
  - Sven Schlarb (Austrian Institute of Technology)
-
+### Implicit yes (no response)
+ - Gregor Zavrsnik (Geoarh)
+ - Janet Anderson (Highbury IVS)
+ - David Anderson (Highbury IVS
+ 
 ## Change detail:
 The AIP needs to be investigated and possibly adapted to accommodate two different user groups:
 1.	Archives where the core business is e-archive and making sure digital material is accessible on the long term.
