--- a/MeetingNotes/20200722.md
+++ b/MeetingNotes/20200722.md
@@ -1,6 +1,4 @@
-EARK3 A2 meeting on 22nd of July 2020
-
-# Minutes
+# Minutes of EARK3 A2 meeting on 22nd of July 2020
 
 ## Members:
 
@@ -31,24 +29,40 @@ Apologies:
 •	Phillip Tømmerholt (Danish National Archives)
 
 ## Text: 
+
 Welcome, E-ARK is working in vacation time. 
+
 Document format is PDF. After A3 validation we can look for format transformation if needed. 
+
 All specs are up in G-Drive and Sep 1st  is the last date for internal comments. 
+
 The meeting slots in Webex will be open for the next two WED-s, the next A2 meeting is on Aug 12th + we will have time for Geospatial CITS. 
+
 
 -	Progress report of specs:
 
 *IP-s*/ KB: Different IP-s are back in maintenance mood.
+
 *Overall admin*/ KB: We are working.
+
 *Geodata +GIS*/ GZ reports to be working with GIS spec, have put up the spec draft with structure. Agreed that it would be helpful to cover that part on Aug 12th meeting. MS is on vacation but KB will let him know. Besides that GZ comments feedback from OGC that we should discuss the topic of what type of formats or criteria to have, e.g US have different criteria than Europe. Agreed that KB will circulate the draft via e-mail to A2 group to be commented. Geodata topic will be presented on the meeting on Aug12th, for 45 minutes. 
+
 *RM*/ KB: Spec is up in Drive.
+
 *SIARD*/ KB: The doc is up in Drive. Also we have user group doc up there, please comment!
+
 *E-Heatlh1*/ SM: The doc is in Drive, JK has done language review, the last diagram was inserted yesterday. We will have discussion about METS profiles tomorrow. 
+
 *E-Health 2*/ AP reports progress by now, they are compailing text with JZ. When picture is more clare they will contact KB to get answers to some questions indicated. 
+
 *Premis*/ KB: The doc is in Drive, waiting for Luis Faria to give comments. 
+
 *Archival description*/ KB: The doc is in Drive, working with references.
+
 *Guidelines and procedures*/ KB: The big doc is in Drive, review is going to be in Aug. The question is what people want to have in guideline? KB and JK also working with 3 procedures, revision, review and creation of CITS.
+
 *Endorsement and certification*/ KB: Starting slowly. 
+
 KB Q if AL is working with user group? No. VMO is working with use cases, not user group. 
 
 Next meeting is on Aug 12th with time to geospatial specifics, GZ will provide slides. 
