--- a/MeetingNotes/20200722.md
+++ b/MeetingNotes/20200722.md
@@ -2,6 +2,7 @@
 
 ## Members:
 
+Attending:
 •	Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
 •	Audun Lund (Swiss Federal Archives)
 •	Anja Paulič (Archives of the Republic of Slovenia) 
