--- a/MeetingNotes/20200812.md
+++ b/MeetingNotes/20200812.md
@@ -27,7 +27,6 @@ EARK3 A2 meeting on 12th of August 2020
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 Apologies: 
-
 •	Jože Škofljanec (Archives of the Republic of Slovenia)
 •	Lars J Alvik (National Archives of Norway 
 •	Anja Paulič (Archives of the Republic of Slovenia) 
@@ -58,9 +57,9 @@ All specs are loaded to Drive, no comments yet but its possible to add.
 
 PT Q about CITS SIARD type vocabulary, related to the issue put up to GH. KB confirms that this can be done ad hoc as we need the same for the E-Heatlh1, its in the agenda. 
 
-*Geodata +GIS*/ The Geo CITS 2.0.2 update presentation by GZ focusing on what change requests were requested, major changes done and open questions feedback. Presentation link to Drive: https://drive.google.com/drive/u/0/folders/1r_zRp9JKDfPMQ7tFPYSz3wlLcLGlUrKS?sort=7&direction=d
+*Geodata +GIS*/ 
 
-Discussion of 2 open Q-s takes place. 
+The Geo CITS 2.0.2 update presentation by GZ focusing on what change requests were requested, major changes done and open questions feedback. Presentation link to Drive: https://drive.google.com/drive/u/0/folders/1r_zRp9JKDfPMQ7tFPYSz3wlLcLGlUrKS?sort=7&direction=d. Discussion of 2 open Q-s takes place. 
 
 1.	Schema compliance. 
 
