--- a/MeetingNotes/20200812.md
+++ b/MeetingNotes/20200812.md
@@ -57,7 +57,7 @@ All specs are loaded to Drive, no comments yet but its possible to add.
 
 PT Q about CITS SIARD type vocabulary, related to the issue put up to GH. KB confirms that this can be done ad hoc as we need the same for the E-Heatlh1, its in the agenda. 
 
-*Geodata +GIS*/ 
+- *Geodata +GIS*/ 
 
 The Geo CITS 2.0.2 update presentation by GZ focusing on what change requests were requested, major changes done and open questions feedback. Presentation link to Drive: https://drive.google.com/drive/u/0/folders/1r_zRp9JKDfPMQ7tFPYSz3wlLcLGlUrKS?sort=7&direction=d. Discussion of 2 open Q-s takes place. 
 
