--- a/MeetingNotes/20200819.md
+++ b/MeetingNotes/20200819.md
@@ -24,7 +24,6 @@ EARK3 A2 meeting on 19th of August 2020
 •	Vesa-Matti Ovaska DLM (National Archives of Finland)
 
 Apologies: 
-
 •	Carl Wilson (Stichting Open Preservation, OPF)
 •	Gregor Završnik (Geoarch)
 •	Jože Škofljanec (Archives of the Republic of Slovenia)
@@ -61,9 +60,8 @@ All docs are available for comments in A2 folder in Drive, the deadline for inte
 
 *Endorsement and certification*/ KB: We can start with it when other docs are finished. 
 
-*SIARD*/ 
+- *SIARD*/ Status update: 
 
-Status update: 
 Use cases/ MM reports working with a summary of the findings, collecting country-specific topics and linking to SIARD spec. Work is a little bit late, but compressing the final summary. 
 
 (1) The draft document of SIARD-2.2.0 RFC Format Specification. New ver of SIARD, a part of DILCIS board in order to focus on scalability to be able to handle LOBs. Draft sent to all in the middle of July but got comments only from KB, KA and LR. 
