--- a/MeetingNotes/20200819.md
+++ b/MeetingNotes/20200819.md
@@ -60,7 +60,9 @@ All docs are available for comments in A2 folder in Drive, the deadline for inte
 
 *Endorsement and certification*/ KB: We can start with it when other docs are finished. 
 
-- *SIARD*/ Status update: 
+- *SIARD*/ 
+
+Status update: 
 
 Use cases/ MM reports working with a summary of the findings, collecting country-specific topics and linking to SIARD spec. Work is a little bit late, but compressing the final summary. 
 
@@ -70,11 +72,11 @@ Use cases/ MM reports working with a summary of the findings, collecting country
 (2) Draft of CITS for SIARD. It has to incorporate to the current version, how to place LOBs, how to describe how to place LOBs. Discussion postponed to next week meeting due to the short meeting time this time.
 (https://docs.google.com/document/d/161CS7Qc1lgobb19W9itUPypClfQNf4IC/edit)
 
-(3) User group/ LR, KA and PT – see how we can get resources to get on that part. 
+User group/ LR, KA and PT – see how we can get resources to get on that part. 
 
 ABN runs through and explains SIARD format specification document (1) which includes how we are handling actual LOBs (Siard 2.2)?; the difference between LOBs are stored outside or inside of SIARD file; if LOBs are internal or external; internal LOBs can be inside or outside of SIARD file, but external is always outside of SIARD file. Also, detailed explanations of all parts of segmentation and splitting which are included in ch 8 and 9. Doc is waiting for comments in Drive!
 
-PT shows where to find CITS for SIARD draft. Thanks for the comments KB and JA, waiting for others to comment, especially to example package PT have created. Also, there is a Q about guideline text to agree with KB, should it be here or is it too technical. Example package links to the work with A3. Package METS and Representation METS - please look into them, we’ll talk about it in the meeting after a week! PT will create different tables of XML and a new version based on the feedback from KB. 
+PT shows where to find CITS for SIARD draft (2). Thanks for the comments KB and JA, waiting for others to comment, especially to example package PT have created. Also, there is a Q about guideline text to agree with KB, should it be here or is it too technical. Example package links to the work with A3. Package METS and Representation METS - please look into them, we’ll talk about it in the meeting after a week! PT will create different tables of XML and a new version based on the feedback from KB. 
 
 JA Q about ENG language check to ABN. Comments can be added directly to G-Docs. ABN comments that typos are there from last versions, didn’t have time to correct yet. 
 
