--- a/MeetingNotes/20200902.md
+++ b/MeetingNotes/20200902.md
@@ -48,7 +48,7 @@ For internal comments, 1st of Sept was the date. If missing that you need to agr
 
 *IP-s*/ KB: All are in maintenance mood. Reminder to SS to look at the whitepaper (DILCIS board). SS- OK! 
 
-*SIARD*/ ABN: Received a lot of comments, still waiting for some (AL), plenty of work ahead. AL will receive some assistance. PT is incorporating review remarks, still missing mail from AKG regarding documentation requirements. Q about the profile: Do we have one profile for each package METS and representation METS or both METS files? KB there will be two METS profiles, otherwise, you might end up with 2 requirements for the same thing. AK confirmes he will answer ASAP. PT is not sure what to do with Schematron doc? KB that’s not to be ready by review, we have time. PT adds to all that if you have time, we have time for extra comments! 
+*SIARD*/ ABN: Received a lot of comments, still waiting for some (AL), plenty of work ahead. AL will receive some assistance. PT is incorporating review remarks, still missing mail from AKG regarding documentation requirements. Q about the profile: Do we have one profile for each package METS and representation METS or both METS files? KB there will be two METS profiles, otherwise, you might end up with 2 requirements for the same thing. AKG confirmes he will answer ASAP. PT is not sure what to do with Schematron doc? KB that’s not to be ready by review, we have time. PT adds to all that if you have time, we have time for extra comments! 
 
 Deadline for English wording is as soon as you are ready. ABN proposes to handle that in 2 rounds. AS we have to avoid working with the same version KB will send an e-mail if JK and JA can start checking language. 
 
