--- a/MeetingNotes/20200916.md
+++ b/MeetingNotes/20200916.md
@@ -4,8 +4,8 @@ EARK3 A2 meeting on 16th of Sep 2020
 
 ## Members:
 
-• Anja Paulič (Archives of the Republic of Slovenia) 
 • Karin Bredenberg DLM (Kommunalförbundet Sydarkivera, chair)
+• Anja Paulič (Archives of the Republic of Slovenia) 
 • Anders Bo Nielsen (Danish National Archives)
 • Ane Hovdan (National Archives of Norway)
 • Audun Lund (Swiss Federal Archives)
@@ -37,7 +37,7 @@ Apologies:
 
 ## Text: 
 
-Since today we use Zoom, it's possible to join via MS Teams to zoom as well (AL). Next meeting on Sep 30th. We have folder in Drive 16 "Review materials" – needs to be updated! By the same time, all specs need to be ready to review. In parallel finalizing documents and Eng review will go on. 
+Since today we use Zoom. It's possible to join via MS Teams to zoom as well (AL). Next meeting on Sep 30th. We have folder in Drive 16 "Review materials" – needs to be updated! By the same time, all specs need to be ready to review. In parallel finalizing documents and Eng review will go on. 
 
 
 
@@ -47,20 +47,20 @@ Since today we use Zoom, it's possible to join via MS Teams to zoom as well (AL)
 
 *IP-s*/ KB: All are in maintenance mood. The splitting part will come, but it's not going to review now. 
 
-*SIARD*/ PT: Finalizing the doc, and waiting for profile (will be done by KB). ABN comments RFC (Request for Comments) Format Spec: trying to make decisions regarding different opinions; making certain that actual schema available in GH as text and giving access rights. KB Q if you feel you can't make a decision, why not to put it as a question in RFC? ABN: Yes, also put some as our suggestions/proposal. KB points out that we have to come up with routine how we will do the translations. How do we say it's a correct translation? KB will send a link of TCAS. 
+*SIARD*/ PT: Finalizing the doc, and waiting for profile (will be done by KB). ABN comments RFC (Request for Comments) spec: trying to make decisions regarding different opinions; making certain that actual schema available in GH as text and giving access rights. KB Q if you feel you can't make a decision, why not to put it as a question in RFC? ABN: Yes, also put some as our suggestions/proposal. KB points out that we have to come up with routine how we will do the translations. How do we say it's a correct translation? KB will send a link of TCAS. 
 
 MM (case studies): The doc is expanding, more details coming in, should be ready by the end of this week or beginning of the next week, both Case study 1 and 2. 
+
 LR (user groups): A meeting was held last week where decided the next steps, created a GH page. Also created a file with the contact list in Drive. Please let KB know when it's correct sending out to A5. Don't forget A4 and JK – next week. 
 
 *Geodata +GIS*/ GZ received comments from DNA which were very extensive, thanks! It means more work but more useful spec. Sharing and editing at the same time – some problems with syncing in Drive.  MF suggests online editing just for the draft version, without numbering etc. Later work with details, keep it as simple as possible. GZ will send the latest document for Eng check to JA, but keep tracking all changes that will come later. 
+GIS CITS – progress, but not be finished by 30th, we have another timeline. Progress is steady, planning meeting every 2nd week with CW, JK and MS.  
 
 Sep 30th is the latest date, use Drive format! KB will add front pages and creating PDF. 
 
-GIS CITS – progress, but not be finished by 30th, we have another timeline. Progress is steady, planning meeting every 2nd week with CW, JK and MS.  
-
 *RM*/ KB: Working with comments, thanks to MF!
 
-*E-Heatlh1*/ SM is on vacation, but all is on line. 
+*E-Heatlh1*/ SM is on vacation, but everything is on the line. 
 
 *E-Health 2*/ AP: After some contacts there is a doubt that partner have COVID. KB offers special meeting to discuss what we can do, in Oct. JK will join as well. Fingers crossed everyone will be ok!  
 
@@ -73,6 +73,7 @@ GIS CITS – progress, but not be finished by 30th, we have another timeline. Pr
 *Endorsement and certification*/ KB: Endorsement is kind of started with archival information CITS. 
 
 We are on our way, big date on Sep 30th!
+
 Its easier to set up Zoom than Webex for extra meetings, just let KB know. Recordings will be up until notes are ready (KO will delete).
 
 Next meeting is on Sep 30th 
