--- a/MeetingNotes/20200930.md
+++ b/MeetingNotes/20200930.md
@@ -48,17 +48,17 @@ Today we need to have confirmation if all specs are ready, check if created info
 
 *IP-s*/ KB: All are in maintenance mood. There will be changes after getting feedback of splitting done with the help of SIARD. 
 
-*SIARD*/ KB has got links of RFC for SIARD and CITS for SIARD by e-mail, thanks to ABN for the big information document. ABN points out that it is important to notify the right people, almost all of the public sector will comment the spec as soon as KB says when. KB will shorten the text of RFC to fit it to the webpage. Its just not the one place, we are informing the commission, Charlotte and Becky, the rest of the world. KB and JK can't say the time when it will be published, but the latest in October. We have one survey per each spec which means having the link to the page where to find them, ABN has to pinpoint to RFC. The link to the doc needs to be on the webpage and correct folder in GH. KB will keep in contact to get the links to the correct places. 
+*SIARD*/ KB has got links of RFC for SIARD and CITS for SIARD by e-mail, thanks to ABN for the big information document. ABN (RFC for SIARD) points out that it is important to notify the right people, almost all of the public sector will comment the spec as soon as KB says when. KB will shorten the text of RFC to fit it to the webpage. Its just not the one place, we are informing the commission, Charlotte and Becky, the rest of the world. KB and JK can't say the time when it will be published, but the latest in October. We have one survey per each spec which means having the link to the page where to find them, ABN has to pinpoint to RFC. The link to the doc needs to be on the webpage and correct folder in GH. KB will keep in contact to get the links to the correct places. 
 
-PT has created the questions KB has asked, everyone please take a look at the questions of the CITS of SIARD and have a dialogue with us. 
+PT (CITS for SIARD) has created the questions KB has asked, everyone please take a look at the questions of the CITS of SIARD and have a dialogue with us. 
 
-MM reports that case study 1 and 2  are ready to give to review, everybody can give comments and feedback. Links:
+MM (case studies) reports that case study 1 and 2  are ready to give to review, everybody can give comments and feedback. Links:
 Case Study 1: Experiences with workflows and documentation practices.
 https://docs.google.com/document/d/1b-WWLZNrcEzFu8AgvjVApuhxXGMLUU9Um53RVo3EPhM/edit?usp=sharing
 Case Study 2: Experiences working with large objects and big amount of data
 https://docs.google.com/document/d/1zq7RG_IqYiDOYHI2wBr0NuIigv_Xb7INz2uaB9jVmWE/edit?usp=sharing
 
-LR reports they had one meeting last week regarding user groups, most of the work done is regarding case studies. Please LR let us know when we need to do things and share a list that we should enter in. ABN, LR, KA and PT made a list of tasks we have to perform. 
+LR (user groups) reports they had one meeting last week regarding user groups, most of the work done is regarding case studies. Please LR let us know when we need to do things and share a list that we should enter in. ABN, LR, KA and PT made a list of tasks we have to perform. 
 
 *Geodata +GIS*/ GZ reports finished corrections to the spec, it's uploaded to the Drive and sends the correct link to KB. Have added some elements from internal users of DNA,  also corrected the IP structures. Missing the infotext, but will finish it today by noon /12CET, KB will start with surveys today. Regarding GIS had a meeting on Monday, discussed the use of standards, things are progressing, the next meeting in two weeks. GZ Q what are the statistics? KB in drive please add how many comments you have, e-mail was sent on Sep 2nd.
 
