--- a/MeetingNotes/20201014.md
+++ b/MeetingNotes/20201014.md
@@ -47,7 +47,7 @@ KB has started with an annual report. Every month we have to report to the opera
 
 *IP-s*/ KB: All are in maintenance mood. 
 
-*SIARD*/ Going out to review. Q to VMO or LR – you have made the form for SIARD user group, should we spread it out to the wider audience or just inside the project. LR explains the list consists of 16 names, would be nice if more participants. If someone spreads the link I am not against it, but personally would like to make GH more ready. KB proposes to spread it in Jan 2021 when all comments are back, lets have it as a plan for spring.  
+*SIARD*/ Going out to review. Q to VMO or LR – you have made the form for SIARD user group, should we spread it out to the wider audience or just inside the project? LR explains the list consists of 16 names, would be nice if more participants. If someone spreads the link I am not against it, but personally would like to make GH more ready. KB proposes to spread it in Jan 2021 when all comments are back, lets have it as a plan for spring.  
 
 *RM*/ Going out to review.
 
@@ -64,9 +64,10 @@ KB has started with an annual report. Every month we have to report to the opera
 *Endorsement and certification*/ ASAP we have these reviews out we can dig into the endorsement and certification milestone. 
 
 *Geodata +GIS*/ GZ:
+
 GIS spec: had a meeting with a new team, changing the approach to fit the actual needs with the archive. Next meeting next Wed, will present a new structure, so the archives would be able to use it and validate it later. 
 
-GEO CITS: ABN gave comments on how to change the structure of GEO CITS, the draft is already out to review. We can add missing elements and structure the folders in the METS profile later. JA adds we are putting the Moscow staff as ABN pointed out we are missing them, also getting all the comments for the text. It was a good meeting with people who use the specs., useful comments, better progress now. GZ will prepare a new structure which elements will be added to the new document and then take KBs proposal with CS, also add the Moscow elements and METS elements to the final document. 
+GEO CITS: ABN have given comments on how to change the structure of GEO CITS, the draft is already out to review. We can add missing elements and structure the folders in the METS profile later. JA adds we are putting the Moscow staff as ABN pointed out we are missing them, also getting all the comments for the text. It was a good meeting with people who use the specs., useful comments, better progress now. GZ will prepare a new structure which elements will be added to the new document and then take KBs proposal with CS, also add the Moscow elements and METS elements to the final document. 
 Geodata can be family spec. GZ adds ABN comment that we should decide one standard for each type of geodata, not proposing many. If we don’t constrict them to one specific standard then we can have chief interoperability within European archives. 
 
 Next meeting is on Oct 28th, the online room is open also for  21st of OCT.  
