--- a/MeetingNotes/20201111.md
+++ b/MeetingNotes/20201111.md
@@ -36,7 +36,9 @@ Apologies:
 ## Text: 
 
 The next A2 meetings are as follows: 2nd of Dec and 9th of Dec. Brake between meetings is until the 13th of Jan 2021. 
+
 Next week time slot is for SIARD meeting, on Nov 18th. Rest of the Wednesdays the A2 Zoom is free to use for your team. 
+
 On Dec 16th we’ll have the project review, but the online room is free to use. 
 
 Reviews are out, not many comments, but from really low to very high.  2nd group of specs – sent out a couple of weeks ago, will last until  Jan 17th. Guidelines we are working now – will be out on Feb 2021. There are some, but not many. Start the text. 
@@ -50,24 +52,24 @@ Reviews are out, not many comments, but from really low to very high.  2nd group
 *SIARD*/ PT comments starting the guideline text of CITS SIARD. LR adds that there will be a meeting next week how to go further. At the moment we have 18 names in the contact list. KB suggest to AL participate in that meeting, AL will try to manage that. 
 ABN comments that they can't finish guidelines before comments from specs. KB adds there are a lot of questions at the same time how do we do it? KB will send example document in Swedish to everyone to see what we have put to guidelines to SIARD team. SIARD team is prioritising tasks as AIP can be held later, in spring and they need to save resources.  Not yet critical. DA adds that besides resources it is also important that persons would be available. 
 
-*Geodata +GIS*/ GZ: continued weekly meetings, creation of gis cits, adding missing … interesting discussion how archivist sees it. Creating spec and guideline at the same time. 
-. 
-*RM*/ Out on review. It someone can aid with examples, you are welcome.
+*Geodata +GIS*/ GZ: continued weekly meetings, creation of GIS CITS. Had an interesting discussion on how archivist sees it. Creating spec and guideline at the same time. 
 
-*E-Heatlh1*/ SM not a lot of progress, didn’t have a clear idea what to put to the guideline. However, started writing spec for A3 specifying the SIP creation tool. Start what will be needed in guidelines, who is the audience, probably need to have a conversation with Norwegian software vendors. KB adds that’s the common issue we have, archiving building block means archivists, tricky one. The major bottleneck in Norway is software vendors, who are developing their own specs. It is a global market, the overall idea of the European standard is a good idea, but we have to make it easy for them.  
+*RM*/ Out on review. If someone can aid with examples, you are welcome.
 
-*E-Health 2*/ AP comments they have finally decided about the format of spec: GRC data format – the database that oncological institute currently has. We got Boris  Domajnko to help with the technical part, good news.  
+*E-Heatlh1*/ SM reports not having a clear idea what to put to the guidelines. However, started writing spec for A3 specifying the SIP creation tool. Start what will be needed in guidelines, who is the audience, probably need to have a conversation with Norwegian software vendors. KB adds that’s the common issue we have, archiving building block means archivists, tricky one. The major bottleneck in Norway is software vendors, who are developing their own specs. It is a global market, the overall idea of the European standard is a good idea, but we have to make it easy for them.  
+
+*E-Health 2*/ AP comments they have finally decided about the format of the spec: GRC data format, the database that oncological institute currently has. Got Boris  Domajnko to help with the technical part, good news.  
 
 *Premis*/ Out on review. 
 
 *Archival description*/ Out on review.
 
-*Endorsement and certification*/ They have own milestones, endorsement follow how archival description spec was set up. Certification is a lot more tricky as we are looking for if it is possible to certify our own spec, can we certify standard, certify profiles? 
+*Endorsement and certification*/ They have own milestones, endorsement follow how archival description spec was set up. Certification is a lot more tricky as we are looking for possibility to certify our own spec, can we certify standard, certify profiles? 
 
 PT Q about review and CITS SIARD - are we just waiting for the final period or is it possible to get comments during the review? KB explains that don’t expect anything before Christmas. You can start looking at the comments, but it is important not to make final decisions until you have all the comments. 
 
 
-Next meeting is on DEc 2nd.
+Next meeting is on Dec 2nd.
 
 ## Notes by: 
 
