--- a/MeetingNotes/20201202.md
+++ b/MeetingNotes/20201202.md
@@ -41,7 +41,7 @@ Dec 16th is the date for annual review.
 
 Reviews: Group II ends on Dec 17th, group III starts in Feb. 
 
-Guidelines: JK and KB have gone through replies, the summary from the group I is diverse. We have stated 2 y for a review cycle, KB proposes 5 y for a mayor revision period, we can do minor revisions. The guideline for everything is a tricky one. The only hint is to look comments, KB can’t give any clear direction on what to do. E.g, some wanted no acronyms, but how to avoid them? DA adds that acronyms are always a problem. SM comments that produce smth, use practical software spec., talk to actual people who could be using it and focusing on the assumption about the audience. 
+JK and KB have gone through replies, the summary from the group I is diverse. We have stated 2 y for a review cycle, KB proposes 5 y for a mayor revision period, we can do minor revisions. The guideline for everything is a tricky one. The only hint is to look comments, KB can’t give any clear direction on what to do. E.g, some wanted no acronyms, but how to avoid them? DA adds that acronyms are always a problem. SM comments that produce smth, use practical software spec., talk to actual people who could be using it and focusing on the assumption about the audience. 
 
 - Progress report of specs:
 
