--- a/MeetingNotes/20201209.md
+++ b/MeetingNotes/20201209.md
@@ -36,7 +36,9 @@ Apologies:
 ## Text: 
 
 The next meeting is on Jan 13th. Zoom bookings have been shared via e-mail. The rest of the Wed-s meeting room is up for workgroups, please use it. 
+
 On Dec 16th is the meeting of the annual review.
+
 Reviews are ending on Jan 17th. 
 
 - Progress report of specs:
@@ -46,7 +48,8 @@ Reviews are ending on Jan 17th.
 *SIARD*/ KB: RFC is out on review, also starting work with a user groups of relational databases.   
 
 *Geodata +GIS*/ GZ reports about weekly meetings, work on GIS spec and review for Geospatial spec. ABN has proposed to expand the time for that amount of work we are doing, we would have been planned more time than 2 months. KB needs to be informed what the extension of the time means. GZ will have a zoom meeting at 1 o’clock, and ABN will specify the amount of work. 
-GZ was invited to ODC team meeting oncoming THU afternoon, also invited them to review CITS for GEO spec. We are not posting the request for the community centre, it is fine with them.  Also discussed that it a better time for us to propose the new spec to be community standard would be after this project. NB! DILCIS board needs to be informed directly to see and be aware of what GZ will present at the meeting on THU! Fulgencio was going to aid to write the application. It is not OK to let DILCIS board know just one day before the meeting. GZ was invited on Monday. GZ will send the info ASAP.
+
+GZ was invited to ODC team meeting on coming THU afternoon, also invited them to review CITS for GEO spec. We are not posting the request for the community centre, it is fine with them.  Also discussed that a better time for us to propose the new spec to be community standard would be after this project. NB! DILCIS board needs to be informed directly to see and be aware of what GZ will present at the meeting on THU! Fulgencio was going to aid to write the application. It is not OK to let DILCIS board know just one day before the meeting! GZ was invited on Monday. GZ will send the info ASAP.
 
 *RM*/ KB: out on review.
 
