--- a/MeetingNotes/20201209.md
+++ b/MeetingNotes/20201209.md
@@ -49,7 +49,7 @@ Reviews are ending on Jan 17th.
 
 *Geodata +GIS*/ GZ reports about weekly meetings, work on GIS spec and review for Geospatial spec. ABN has proposed to expand the time for that amount of work we are doing, we would have been planned more time than 2 months. KB needs to be informed what the extension of the time means. GZ will have a zoom meeting at 1 o’clock, and ABN will specify the amount of work. 
 
-GZ was invited to ODC team meeting on coming THU afternoon, also invited them to review CITS for GEO spec. We are not posting the request for the community centre, it is fine with them.  Also discussed that a better time for us to propose the new spec to be community standard would be after this project. NB! DILCIS board needs to be informed directly to see and be aware of what GZ will present at the meeting on THU! Fulgencio was going to aid to write the application. It is not OK to let DILCIS board know just one day before the meeting! GZ was invited on Monday. GZ will send the info ASAP.
+GZ was invited to ODC team meeting on coming THU afternoon, also invited them to review CITS for GEO spec. We are not posting the request for the community centre, it is fine with them.  Also discussed that a better time for us to propose the new spec to be community standard would be after this project. NB! DILCIS board needs to be informed directly to see and be aware of what GZ will present at the meeting on THU! Fulgencio was going to aid to write the application. It is not OK to let DILCIS board know just one day before the meeting! GZ was invited just on Monday. GZ will send the info ASAP.
 
 *RM*/ KB: out on review.
 
