--- a/MeetingNotes/20210210.md
+++ b/MeetingNotes/20210210.md
@@ -54,7 +54,7 @@ A little less work but still a lot of work needed to be done. Putting things out
 
 *IP-s*/ ongoing. 
 
-*SS update of the AIP White Paper.
+*SS update of the AIP White Paper*
 
 Working with CW on that. The idea was to change the AIP, because so far it has not much interest. The idea is that AIP format will help metadata that is AIP specific, which allows capturing the history of the package, so you can capture the provenance appropriate to AIP, completely inline with CSIP. In other words, creating metadata extension keeping the history of the packages. The advantage would be that if you have that already implemented and then consider a lightweight format to catch the history and create a series of packages, then how to capture the provenance. MF stresses out that anyone who wants to be compatible with us, they don’t have to implement AIP, but only need to take out the data in that format. SS explains that they also discuss what forms of support of the AIP format can we have. There can be native support, but also not to block the way of exporting the standard AIP which is also fine and not expensive. Thinking about the way of allowing different approaches. 
 
