--- a/MeetingNotes/20210324.md
+++ b/MeetingNotes/20210324.md
@@ -57,9 +57,9 @@ User groups: Responding to the user group is the only thing we are behind the sc
 *RM*/ KB: No change, comments have been handled, mostly editorial edits. MF and KB got the request for a presentation of RM. KB can present the spec but it's before DPC. 
 MF has Q to JA about the interest towards RM, please ask CW. Three major institutions are working on RM like DPC, OPF and ourselves. Maybe joining hands in future. We were the first ones. 
 
-*E-Heatlh1*/ SM only A3 news, there will be a webinar tomorrow. 
+*E-Heatlh1*/ SM: only A3 news, there will be a webinar tomorrow. 
 
-*E-Health 2*/ AP Nothing new to report, well finish spec on Friday, then send to JK and KB for proofreading. The cancer registry has sent some explanations of some terms, we’ll send specs to them too for review. 
+*E-Health 2*/ AP: Nothing new to report, well finish spec on Friday, then send to JK and KB for proofreading. The cancer registry has sent some explanations of some terms, we’ll send specs to them too for review. 
 
 *Premis*/ KB: No news. 
 
