--- a/MeetingNotes/20210421.md
+++ b/MeetingNotes/20210421.md
@@ -56,22 +56,22 @@ PT: CITS SIARD – preparing presentation of CITS SIARD along with rest of the t
 
 User group: Ongoing work with e-mail list. JA confirms that we haven’t replied to that and will send a follow-up. 
 
-ABN adds we still have work to do with the actual user group. PT reports about meeting with colleagues who have written guideline for cits CITS SIARD, should we put it to the official channel. KB: Yes, we need statistics. 
+ABN adds we still have work to do with the actual user group. PT reports about meeting with colleagues who have written guideline for CITS SIARD, should we put it to the official channel. KB: Yes, we need statistics. 
 
 *Geodata +GIS*/ GZ: Guidelines finished and put to internal review on Mon. Q regarding METS - AKG will send KB an e-mail. Some of the issues are caused as we took SIARD spec as a template. Now working with GIS guideline, it will not have so many elements as the geo guideline was. Regarding sent comments by KB, some replies will be sent today from AKG, PT and ABN. KB Q any plans when you are ready? We are not going to have more review periods! GZ Spec and GL for GEO – by the end of next week, GL for GIS will take more time. 
 ABN adds that AKG and colleague Matthew will support as much as possible. 
 
 *RM*/ KB: No change. 
 
-*E-Heatlh1*/ SM waiting for May and programmer. Updating the CITS. 
+*E-Heatlh1*/ SM: Waiting for May and programmer. Updating the CITS. 
 
-*E-Health 2*/ AP: we have to draft a guideline to be sent out on May 13th, and figure out if we have any comments from our mini-review. Waiting for comments from the cancer registry.   
+*E-Health 2*/ AP: We have to draft a guideline to be sent out on May 13th, and figure out if we have any comments from our mini-review. Waiting for comments from the cancer registry.   
 
 *Premis*/ KB: No changes. 
 
 *Archival description*/ KB: No changes.
 
-*Guidelines and procedures*/ KB: guidelines out on review, procedures will be published at the end of the project. 
+*Guidelines and procedures*/ KB: Guidelines out on review, procedures will be published at the end of the project. 
 	
 *Endorsement and certification*/ KB: Testable, not supposed to be published either at the end of the project. Certification: M2.3 next meeting on May 12th with DILCIS board. 
 
